--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
     <artifactId>poi-ooxml</artifactId>
     <version>5.2.3</version>
 </dependency>
+   
+  <dependency>
+     <groupId>com.my</groupId>
+     <artifactId>commons-deps</artifactId>
+     <type>pom</type>
+  </dependency>
 <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
 <dependency>
     <groupId>com.aventstack</groupId>
